# ndi_local

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  codebase.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/agents/: AGENTS.md
apps/api/agents/skills/chart-gen/: SKILL.md
apps/api/agents/skills/compare/: SKILL.md
apps/api/agents/skills/data-conformity/: SKILL.md
apps/api/agents/skills/data-quality/: SKILL.md
apps/api/agents/skills/image-ingest/: SKILL.md
apps/api/agents/skills/kpi-dashboard/: SKILL.md
apps/api/agents/skills/maintenance-navale/: SKILL.md
apps/api/agents/skills/nosql-query/: SKILL.md
apps/api/agents/skills/open-analysis/: SKILL.md
apps/api/agents/skills/query-explain/: SKILL.md
apps/api/agents/skills/sql-query/: SKILL.md
apps/api/agents/skills/summarize/: SKILL.md
apps/api/docs/: image_chat.md  images_api.md  images_guide.md
apps/api/scripts/: manage_skills.py
apps/api/src/ndi_api/: constants.py  main.py  settings.py
apps/api/src/ndi_api/api/: dependencies.py  router.py
apps/api/src/ndi_api/plugins/: __init__.py  base.py  manager.py  nosql_plugin.py  sql_plugin.py
apps/api/src/ndi_api/schemas/: __init__.py  data.py  ingest.py  query.py  relations.py  schema.py  status.py
apps/api/src/ndi_api/services/: __init__.py  auth.py  (+24 more)
apps/api/tests/: conftest.py  test_agent_prompts.py  test_cache.py  test_constants.py  test_images.py  test_llm.py  test_prompt_monitoring.py  test_prompt_structure.py  test_session_skills.py  test_sql_validation.py
(+79 files in other folders)
